--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/inter": "^5.2.8",
+    "@mui/material": "^7.3.5",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "isbot": "^5.1.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.9.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
@@ -25,6 +32,7 @@
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
+    "vite-plugin-pwa": "1.1.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
